[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
author = ["kevinyeungkevinyeung@hotmail.com"]

[lib]
# we could use any path here, but we are follwing the community convention
# We could specify a library name using the 'name' field. If unspecified,
# cargo will default to 'package.name', which is what we want.
path = "src/lib.rs" 

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}

# [target.x86_64-apple-darwin]
# rustflags = ["-C", "link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld"]